--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "vinyl": "^0.4.6"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
     "browser-sync": "^2.18.5",
     "coffee-script": "^1.10.0",
     "del": "^1.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-babel": "^6.1.2",
     "gulp-coffee": "^2.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.8",
